<resources>
    <string name="app_name">Final Project</string>
    <string name="welcome">Welcome, </string>
    <string name="quiz">Quiz Questions</string>
    <string name="calculate_score">Calculate Score</string>
    <string name="name_hint">Enter your name</string>
    <string name="star_quiz">Start Quiz</string>
    <string name="high_score">View High Scores</string>
    <string name="topic_hint">Enter the topic</string>
    <string name="combine_app_name">CST2335 Group Final Project</string>
    <string name="currency_title">Currency Converter</string>
    <string name="input_amount">Enter the Amount</string>
    <string name="convert_button">CONVERT</string>
    <string name="save_button">SAVE</string>
    <string name="update_button">UPDATE</string>
    <string name="help">Help</string>
    <string name="from_currency">From</string>
    <string name="to_currency">To</string>
    <string name="converted_amount">Converted Result</string>
    <string name="delete_button">Delete</string>
    <!--Jiayi Li's Flight-->
    <string name="flight_search">search</string>
    <string name="flight_show_list">show list</string>
    <string name="flight_help">help</string>
    <string name="flight_save">save</string>
    <string name="flight_delete">delete</string>
    <string name="flight_save_toast">You just clicked the save button!</string>
    <!--Jiayi Li's Flight-->
    <string name="bear_help">Help</string>
    <string name="bear_help_title">How to use Bear Image</string>
    <string name="bear_help_message">1. Type width and height 2. Click "Generate" button to show image 3. Click the image to delete or save to database 4. Click "Go to View Image" to see all images saved</string>

</resources>
